Selected image overlay text should never be visible https://bugs.webkit.org/show_bug.cgi?id=224734 <rdar://problem/76806399>
Reviewed by Darin Adler.

Source/WebCore:

Make a slight adjustment to the UA stylesheet to ensure that image overlay text is never visible. See below for
more details.

Test: fast/images/image-extraction/image-overlay-with-selection-styles.html

* html/shadow/imageOverlay.css:
(div.image-overlay-text::selection):

Enforce selected text styles for image overlay text.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::selectionPseudoStyle const):

Make an additional adjustment when computing selection pseudo styles for UA shadow root content. Currently, for
elements inside a UA shadow root, we always immediately ascend to the shadow host; this means that `::selection`
pseudo selectors currently don't work in UA stylesheets, since they're skipped when resolving styles, upon
painting selected text.

To fix this, we can let the element's own pseudo styles take precedence over the shadow host's renderer in the
case where we have a selection pseudo style. While we're here, also replace a few raw pointers with `RefPtr`.

LayoutTests:

Add a new layout test.

* fast/images/image-extraction/image-overlay-with-selection-styles-expected.html: Added.
* fast/images/image-extraction/image-overlay-with-selection-styles.html: Added.


Canonical link: https://commits.webkit.org/236718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276236 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/html/shadow/imageOverlay.css
+++ b/Source/WebCore/html/shadow/imageOverlay.css
@@ -38,3 +38,8 @@ div.image-overlay-text {
     position: absolute;
     overflow: hidden;
 }
+
+div.image-overlay-text::selection {
+    color: transparent;
+    background-color: highlight;
+}
